Add subpages profile and settings and changes in logged

--- a/views/logged.hbs
+++ b/views/logged.hbs
@@ -1,5 +1,7 @@
 <section class="index-page">
-  <p class="success">
-    You have been successfully logged in!
-  </p>
+  <img class="avatar" src={{image}} alt="Photo user">
+  <h2>
+    Hello {{ userName }}!
+  </h2>
+  <a class="loginBtn" href="http://localhost:8000/auth/logout">Log out</a>
 </section>
