--- a/public/style.css
+++ b/public/style.css
@@ -80,6 +80,14 @@ button {
   animation-duration: 1s;
 }
 
+.avatar {
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+  box-shadow: 0 0 10px 10px rgba(0,0,0,0.1);
+  object-fit: cover;
+}
+
 .success {
   background: #fff;
   color: #000;
